changed modal IDs to be unique

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -66,11 +66,11 @@
                        aria-label="Comment Options">
 
                     <button type="button" (click)="setEditComment(postComment)" class="btn btn-primary btn-sm"
-                            data-toggle="modal" data-target="#editModal">
+                            data-toggle="modal" [attr.data-target]="'#'+post.id">
                       <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </button>
 
-                    <div class="modal fade" id="editModal" role="dialog">
+                    <div class="modal fade" [attr.id]="post.id" role="dialog">
                       <div class="modal-dialog">
 
                         <!-- Modal content-->
