--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,5 +1,4 @@
 <div *ngIf="post">
-
   <div class="row">
     <div
       class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
@@ -10,30 +9,23 @@
           </h2>
         </div>
         <div class="panel-body">
-
-          <div class="media">
+          <div class="media ">
             <div class="media-left">
               <img class="media-object post-image" src="{{post.image}}" alt="Avatar for {{post.name}}">
             </div>
             <div class="media-body">
               <h4 class="media-heading"> {{post.title}} </h4>
               <i>{{(post.created_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</i> <br>
-
               <div class="post-text">
               {{post.text}}
               </div>
-
             </div>
           </div>
-
           <hr>
-
           <div class="row">
             <div class="col-sm-12" [ngSwitch]="likes.length">
-
                 <b *ngSwitchCase="1">{{likes.length}} {{"Post.like" | translate}}</b>
                 <b *ngSwitchDefault>{{likes.length}} {{"Post.likes" | translate}}</b>
-
               <button *ngIf="likes.indexOf(currentUserId) !== -1" type="button"
                       class="btn btn-success pull-right btn-sm" (click)="likeToggle(currentUserId)">
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
@@ -44,12 +36,8 @@
               </button>
             </div>
           </div>
-
         </div>
-
-
         <div class="panel-footer">
-
           <div class="row">
             <div class="col-md-12">
               <button *ngIf="(this.showBtn.length > 3) && (this.shownComs.length != this.showBtn.length)" type="button"
@@ -57,31 +45,33 @@
               </button>
             </div>
           </div>
-
           <br>
-
           <ul class="list-group">
-            <li *ngFor="let postComment of shownComs" class="list-group-item">
-
+            <li *ngFor="let postComment of shownComs" class="list-group-item comment-layout">
               <div class="media">
                 <div class="media-left">
                   <img class="media-object comment-image" src="{{postComment.author_avatar}}"
                        alt="{{postComment.author_name}}">
                 </div>
-
                   <strong class="media-heading">{{postComment.author_name}}
                     <span class="badge badge-success" *ngIf="currentUserId === postComment.author">{{"Me" | translate}}</span>
                   </strong>
-
-                  <div  class="btn-group pull-right" role="group" aria-label="Comment Options">
+                  <div class="btn-group pull-right" role="group"
+                       aria-label="Comment Options">
+                       <button *ngIf="postComment.likedBy?.includes(currentUserId) === false" type="button"
+                               class="btn btn-default btn-sm" (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)">
+                               <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                       </button>
+                       <button *ngIf="postComment.likedBy?.includes(currentUserId) === true" type="button"
+                               class="btn btn-success btn-sm" (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)">
+                               <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                       </button>
                     <button *ngIf="currentUserId === postComment.author" type="button" (click)="setEditComment(postComment)" class="btn btn-primary btn-sm"
                             data-toggle="modal" [attr.data-target]="'#'+post.id">
                       <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </button>
-
                     <div class="modal fade" [attr.id]="post.id" role="dialog">
                       <div class="modal-dialog">
-
                         <!-- Modal content-->
                         <div class="modal-content">
                           <div class="modal-header">
@@ -99,47 +89,32 @@
                             <button type="button" class="btn btn-default" data-dismiss="modal">{{"Post.Close" | translate}}</button>
                           </div>
                         </div>
-
                       </div>
                     </div>
-
                     <button *ngIf="currentUserId === postComment.author" type="button" class="btn btn-danger btn-sm"
                             (click)="deleteComment(postComment.$key, post.id)">
                       <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </button>
-                  <button *ngIf="postComment.likedBy?.includes(currentUserId) === false" type="button"
-                          class="btn btn-default btn-sm" (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)">
-                          <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                  </button>
-                  <button *ngIf="postComment.likedBy?.includes(currentUserId) === true" type="button"
-                          class="btn btn-default btn-sm" (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)">
-                          <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-                  </button>
-
-                </div>
-
+                  </div>
                   <br>
                   {{postComment.comment}}
                   <br>
                   <small><em>{{(postComment.commented_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</em>
                   </small>
-
-
                   <div class="row">
                     <div class="col-sm-9" [ngSwitch]="postComment.noLikes">
                         <b *ngSwitchCase="1">{{postComment.noLikes}} {{"Post.like" | translate}}</b>
                         <b *ngSwitchDefault>{{postComment.noLikes}} {{"Post.likes" | translate}}</b>
                         <b *ngSwitchCase="null">0 likes</b>
                       </div>
+                      <div class="col-sm-3">
+
+                    </div>
                   </div>
-
               </div>
-
             </li>
           </ul>
-
           <br>
-
           <div class="input-group">
             <input #box [(ngModel)]="newComment" class="form-control" type="text" placeholder="{{'Post.Comment' | translate}}..."
               (keyup.enter)="addComment(box.value)"/>
@@ -150,7 +125,6 @@
               </button>
             </span>
           </div>
-
         </div>
       </div>
     </div>
