--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" routerLink="/"><img src="assets/logo.png" alt="FanZone"></a>
+      <a class="navbar-brand" href="/"><img src="assets/logo.png" alt="FanZone"></a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <app-search [hidden]="!authService.registered"></app-search>
