--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -55,7 +55,7 @@
           <em> {{"PlayerProfile.Clubs" | translate}}:</em> <br>
           <br>
           <div *ngFor="let team of playerTeams">
-            <div *ngIf="(getClub(team.$key))?.name != null"> <!--- only display if the team belongs to a club --->
+            <div *ngIf="(getClub(team.$key))?.name != null"> <!-- only display if the team belongs to a club -->
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
                 <a href="#">
