[145] Fixed the 'insta-follow-redirect problem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,10 @@
 </div>
 
 <div *ngIf="newUser===true">
+  <div class="alert alert-success" role="alert">
+
+    Welcome to GRNFanzone! To get started, try following some of your favourite clubs, teams or players
+
+  </div>
   <app-results></app-results>
 </div>
