--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,10 @@
 a:hover {
   cursor: pointer;
 }
+
+.load-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
