added check if user is following anyone to alert

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="posts?.length === 0 && postsRetrieved === true" class="alert alert-warning" role="alert">
+<div *ngIf="posts?.length === 0 && postsRetrieved === true && followed === true" class="alert alert-warning" role="alert">
 
   Looks like nobody you follow has posted anything yet!
   Please follow some more players, teams or clubs to view their posts. You can
