--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -20,7 +20,7 @@
               <i>{{(post.created_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</i> <br>
 
               <div class="post-text">
-              {{post.text}}
+                {{post.text}}
               </div>
 
             </div>
@@ -31,8 +31,8 @@
           <div class="row">
             <div class="col-sm-12" [ngSwitch]="likes.length">
 
-                <b *ngSwitchCase="1">{{likes.length}} {{"Post.like" | translate}}</b>
-                <b *ngSwitchDefault>{{likes.length}} {{"Post.likes" | translate}}</b>
+              <b *ngSwitchCase="1">{{likes.length}} {{"Post.like" | translate}}</b>
+              <b *ngSwitchDefault>{{likes.length}} {{"Post.likes" | translate}}</b>
 
               <button *ngIf="likes.indexOf(currentUserId) !== -1" type="button"
                       class="btn btn-success pull-right btn-sm" (click)="likeToggle(currentUserId)">
@@ -70,7 +70,8 @@
                 </div>
                 <div class="media-body">
                   <strong class="media-heading">{{postComment.author_name}}
-                    <span class="badge badge-success" *ngIf="currentUserId === postComment.author">{{"Me" | translate}}</span>
+                    <span class="badge badge-success"
+                          *ngIf="currentUserId === postComment.author">{{"Me" | translate}}</span>
                   </strong>
 
                   <div *ngIf="currentUserId === postComment.author" class="btn-group pull-right" role="group"
@@ -98,7 +99,9 @@
                             <button type="button" class="btn btn-success" data-dismiss="modal"
                                     (click)="updateComment()">{{"Post.SaveChanges" | translate}}
                             </button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">{{"Post.Close" | translate}}</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">{{"Post.Close" |
+                              translate}}
+                            </button>
                           </div>
                         </div>
 
@@ -116,41 +119,44 @@
                   <br>
                   <div class="row">
                     <div class="col-sm-3">
-                  <small><em>{{(postComment.commented_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</em>
-                  </small>
-                </div>
-                <div class="col-sm-9">
-                  <small>
-                    <div [ngSwitch]="postComment.noLikes" class="pull-left">
-                      <span class="glyphicon glyphicon-thumbs-up"></span>
-                        <em *ngSwitchDefault>{{postComment.noLikes}} </em>
-                        <em *ngSwitchCase="null">0 </em>
-                      </div>
-                  </small>
-                </div>
-                </div>
-                  <div class="row">
-                      <div class="col-sm-1">
-                        <a *ngIf="postComment.likedBy?.includes(currentUserId) === false" class="pull-left"
-                              (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)" aria-hidden="true"> Like
-                      </a>
-                      <a *ngIf="postComment.likedBy?.includes(currentUserId) === true" class="pull-left"
-                       (click)="commentLikeToggle(postComment.$key, post.id,currentUserId)" aria-hidden="true"> Unlike
-                      </a>
+                      <small><em>{{(postComment.commented_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</em>
+                      </small>
                     </div>
-                    <div class="col-sm-11">
-                      </div>
+                    <!--TODO: Fix likes!-->
+                    <!--<div class="col-sm-9">-->
+                    <!--<small>-->
+                    <!--<div [ngSwitch]="postComment.noLikes" class="pull-left">-->
+                    <!--<span class="glyphicon glyphicon-thumbs-up"></span>-->
+                    <!--<em *ngSwitchDefault>{{postComment.noLikes}} </em>-->
+                    <!--<em *ngSwitchCase="null">0 </em>-->
+                    <!--</div>-->
+                    <!--</small>-->
+                    <!--</div>-->
                   </div>
+                  <!--TODO: Fix likes!-->
+                  <!--<div class="row">-->
+                  <!--<div class="col-sm-1">-->
+                  <!--<a *ngIf="postComment.likedBy?.includes(currentUserId) === false" class="pull-left"-->
+                  <!--(click)="commentLikeToggle(postComment.$key, post.id,currentUserId)" aria-hidden="true"> Like-->
+                  <!--</a>-->
+                  <!--<a *ngIf="postComment.likedBy?.includes(currentUserId) === true" class="pull-left"-->
+                  <!--(click)="commentLikeToggle(postComment.$key, post.id,currentUserId)" aria-hidden="true"> Unlike-->
+                  <!--</a>-->
+                  <!--</div>-->
+                  <!--<div class="col-sm-11">-->
+                  <!--</div>-->
+                  <!--</div>-->
+                </div>
               </div>
-            </div>
             </li>
           </ul>
 
           <br>
 
           <div class="input-group">
-            <input #box [(ngModel)]="newComment" class="form-control" type="text" placeholder="{{'Post.Comment' | translate}}..."
-              (keyup.enter)="addComment(box.value)"/>
+            <input #box [(ngModel)]="newComment" class="form-control" type="text"
+                   placeholder="{{'Post.Comment' | translate}}..."
+                   (keyup.enter)="addComment(box.value)"/>
             <span class="input-group-btn">
               <button [disabled]="newComment === ''" type="button" class="btn btn-success"
                       (click)="addComment()">
