--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -18,15 +18,15 @@
             {{"NavBar.Language" | translate}} <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a (click)="translate.setDefaultLang('en')"><span class="flag-icon flag-icon-gb"></span> English</a></li>
-            <li><a (click)="translate.setDefaultLang('es')"><span class="flag-icon flag-icon-es"></span> Español</a></li>
-            <li><a (click)="translate.setDefaultLang('it')"><span class="flag-icon flag-icon-it"></span> Italiano</a></li>
-            <li><a (click)="translate.setDefaultLang('ro')"><span class="flag-icon flag-icon-ro"></span> Română</a></li>
-            <li><a (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span> Lietuvių</a></li>
-            <li><a (click)="translate.setDefaultLang('ru')"><span class="flag-icon flag-icon-ru"></span> Русский</a></li>
-            <li><a (click)="translate.setDefaultLang('gr')"><span class="flag-icon flag-icon-gr"></span> Ελληνικά </a></li>
-            <li><a (click)="translate.setDefaultLang('zh')"><span class="flag-icon flag-icon-cn"></span> 汉语</a></li>
-            <li><a (click)="translate.setDefaultLang('jp')"><span class="flag-icon flag-icon-jp"></span> 日本語</a></li>
+            <li><a (click)="setLocale('en')"><span class="flag-icon flag-icon-gb"></span> English</a></li>
+            <li><a (click)="setLocale('es')"><span class="flag-icon flag-icon-es"></span> Español</a></li>
+            <li><a (click)="setLocale('it')"><span class="flag-icon flag-icon-it"></span> Italiano</a></li>
+            <li><a (click)="setLocale('ro')"><span class="flag-icon flag-icon-ro"></span> Română</a></li>
+            <li><a (click)="setLocale('lt')"><span class="flag-icon flag-icon-lt"></span> Lietuvių</a></li>
+            <li><a (click)="setLocale('ru')"><span class="flag-icon flag-icon-ru"></span> Русский</a></li>
+            <li><a (click)="setLocale('gr')"><span class="flag-icon flag-icon-gr"></span> Ελληνικά </a></li>
+            <li><a (click)="setLocale('zh')"><span class="flag-icon flag-icon-cn"></span> 汉语</a></li>
+            <li><a (click)="setLocale('jp')"><span class="flag-icon flag-icon-jp"></span> 日本語</a></li>
           </ul>
         </li>
         <li>
