--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -21,6 +21,7 @@
                   <h2 class="only-bottom-margin"> {{(profileData | async)?.name}}
                     <span class="badge badge-success" *ngIf="currentUser === userId">{{"Me" | translate}}</span>
                   </h2>
+
                 </div>
               </div>
             </div>
@@ -31,37 +32,26 @@
             <div class="col-md-12 lead">{{"UserProfile.Following" | translate}}</div>
           </div>
           <div class="row">
-
             <div class="col-md-4 ">
-              <div class="list-group" *ngIf="followingClubs">
-                <a class="list-group-item active lead text-center"> {{"UserProfile.Clubs" | translate}}<span class="badge badge-pill badge-info">{{noClubs}}</span> </a>
-                <div *ngFor="let club of followingClubs | async; let i = index">
-                  <div class="list-group-item list-group-item-action" *ngIf="i<10">
-                  <a (click)="sendToClub(club.id)"> {{club.name}} </a>
-                  <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">{{"Unfollow" | translate}}</button>
-                </div>
-              </div>
-                <div class="list-group-item list-group-item-action" *ngIf="(followingClubs | async)?.length > 10">
-                  <a (click)="sendToClubsList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-md-4 ">
               <div class="list-group" *ngIf="followingTeams">
                 <a class="list-group-item active lead text-center"> {{"UserProfile.Teams" | translate}}<span
                   class="badge badge-pill badge-info">{{noTeams}}</span></a>
                 <div *ngFor="let team of followingTeams | async; let i = index">
                   <div class="list-group-item list-group-item-action" *ngIf="i<10">
-                  <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
-                  <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">{{"Unfollow" | translate}}</button>
+                    <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
+
+                    <button *ngIf="currentUser === userId" type="button"
+                            class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">
+                      {{"Unfollow" | translate}}
+                    </button>
+                  </div>
                 </div>
                 <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 10">
                   <a (click)="sendToTeamsList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
                 </div>
               </div>
             </div>
-
             <div class="col-md-4 ">
               <div class="list-group" *ngIf="followingPlayers">
                 <a class="list-group-item active lead text-center"> {{"UserProfile.Players" | translate}}<span
@@ -77,6 +67,24 @@
                 </div>
                 <div class="list-group-item list-group-item-action" *ngIf="(followingPlayers | async)?.length > 10">
                   <a (click)="sendToPlayersList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 ">
+              <div class="list-group" *ngIf="followingClubs">
+                <a class="list-group-item active lead text-center"> {{"UserProfile.Clubs" | translate}}<span
+                  class="badge badge-pill badge-info">{{noClubs}}</span> </a>
+                <div *ngFor="let club of followingClubs | async; let i = index">
+                  <div class="list-group-item list-group-item-action" *ngIf="i<10">
+                    <a (click)="sendToClub(club.id)"> {{club.name}} </a>
+                    <button *ngIf="currentUser === userId" type="button"
+                            class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">
+                      {{"Unfollow" | translate}}
+                    </button>
+                  </div>
+                </div>
+                <div class="list-group-item list-group-item-action" *ngIf="(followingClubs | async)?.length > 10">
+                  <a (click)="sendToClubsList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
                 </div>
               </div>
             </div>
