--- a/src/app/club-profile/club.component.html
+++ b/src/app/club-profile/club.component.html
@@ -2,7 +2,7 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-
+<!-- club profile: name, avatar, description, follow/unfollow button -->
       <div class="row">
         <div class="col-md-12 lead">
           {{"ClubProfile.ClubProfile" | translate}}
@@ -48,7 +48,7 @@
 
       <br>
       <hr>
-
+<!-- display list of teams associated with the current club, with follow/unfollow buttons and links to the team -->
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
           <h4>{{"ClubProfile.Teams" | translate}}:</h4>
@@ -76,7 +76,7 @@
 
       <br>
       <hr>
-
+<!-- display the posts from the current club -->
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
           <h4>{{"ClubProfile.Posts" | translate}}:</h4>
