Comments added to all components

--- a/src/app/clubs-followed/clubs-followed.html
+++ b/src/app/clubs-followed/clubs-followed.html
@@ -1,3 +1,4 @@
+<!-- display all clubs followed by current user in an active list with links to each club -->
 <div class="container-fluid">
   <div class="list-group">
     <a class="list-group-item active lead text-center"> {{"ClubsFollowed.Clubs" | translate}} </a>
