--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
   <app-dashboard></app-dashboard>
 </div>
 
+<!-- display alert if the user is a new user -->
 <div *ngIf="newUser===true">
   <div class="alert alert-success" role="alert">
 
