--- a/src/app/nearby-fixtures/nearby-fixtures.component.html
+++ b/src/app/nearby-fixtures/nearby-fixtures.component.html
@@ -1,3 +1,4 @@
+<!-- display nearby fixtures if user location is allowed -->
 <div class="panel panel-info" *ngIf="fixtures && userLocation">
   <div class="panel-heading">
     <h4>Nearby Fixtures</h4>
@@ -27,5 +28,3 @@
     </sebm-google-map>
   </div>
 </div>
-
-
