--- a/src/app/players-followed/players-followed.html
+++ b/src/app/players-followed/players-followed.html
@@ -1,3 +1,4 @@
+<!-- display all players followed by current user in an active list with links to each player -->
 <div class="container-fluid">
   <div class="list-group">
     <a class="list-group-item active lead text-center"> {{"PlayersFollowed.Players" | translate}} </a>
