--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,4 @@
+<!-- search box -->
 <form class="navbar-form navbar-left" role="search">
     <div class="form-group">
         <input #input type="text" class="form-control" placeholder="{{'Search.SearchBoxPlaceholder'| translate}}" name="q" id="search-box">
