--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -1,3 +1,4 @@
+<!-- display sponsor logos when available -->
 <footer class="footer">
     <div class="well well-lg">Display sponsor logos here.</div>
   </footer>
