--- a/src/app/teams-followed/teams-followed.html
+++ b/src/app/teams-followed/teams-followed.html
@@ -1,3 +1,4 @@
+<!-- display all teams followed by current user in an active list with links to each team -->
 <div class="container-fluid">
   <div class="list-group">
     <a class="list-group-item active lead text-center"> {{"TeamsFollowed.TeamsFollowed"| translate}} </a>
