--- a/src/app/login/login-component.html
+++ b/src/app/login/login-component.html
@@ -1,3 +1,4 @@
+<!-- display social login buttons: Facebook and Google login -->
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
