--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
+      <!-- create toggle for when the app is resized or for mobile view -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1"
               aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -14,6 +15,7 @@
       <app-search [hidden]="!authService.registered"></app-search>
       <ul class="nav navbar-nav navbar-right" [hidden]="!authService.registered">
         <li class="dropdown">
+          <!-- dropdown with all languages available for translation; everything gets translated when language button is clicked -->
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             {{"NavBar.Language" | translate}} <span class="caret"></span>
           </a>
@@ -29,11 +31,13 @@
             <li><a (click)="setLocale('jp')"><span class="flag-icon flag-icon-jp"></span> 日本語</a></li>
           </ul>
         </li>
+        <!-- link to user profile -->
         <li>
           <a routerLink="/user/{{currentUser.uid}}">
             <img class="user" src="{{currentUser.photoURL}}">{{currentUser.displayName}}
           </a>
         </li>
+        <!-- logout button -->
         <li>
           <button type="button" class="btn btn-default navbar-btn" (click)="authService.logout()">
             {{"NavBar.Logout" | translate}}
