--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,3 +1,4 @@
+<!-- display search results in a tabbed view with clubs/teams/players/fixture or display all data if empty query -->
 <div>
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item active">
