--- a/src/app/team-profile/team.component.html
+++ b/src/app/team-profile/team.component.html
@@ -2,7 +2,7 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-
+<!-- display team data and description -->
       <div class="row">
         <div class="col-md-12 lead">
           {{"TeamProfile.TeamProfile"| translate}}
@@ -54,7 +54,7 @@
 
       <br>
       <hr>
-
+<!-- display players in the team -->
       <div class="row">
         <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 ">
           <h4>{{"TeamProfile.Players"| translate}}:</h4>
@@ -79,7 +79,7 @@
       <hr>
 
       <div class="row">
-
+<!-- display recent and upcoming fixtures involving the team-->
         <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
           <h4>{{"TeamProfile.RecentFixtures"| translate}}:</h4>
           <div *ngFor="let fixture of recentFixtures">
@@ -102,7 +102,7 @@
 
       <br>
       <hr>
-
+<!-- display posts made by the team -->
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
           <h4>{{"TeamProfile.Posts"| translate}}:</h4>
