[120] Added games ticker to profile

--- a/src/app/nearby-fixtures/nearby-fixtures.component.html
+++ b/src/app/nearby-fixtures/nearby-fixtures.component.html
@@ -1,5 +1,5 @@
 <!-- display nearby fixtures if user location is allowed -->
-<div class="panel panel-info" *ngIf="fixtures && userLocation">
+<div class="panel panel-primary" *ngIf="fixtures && userLocation">
   <div class="panel-heading">
     <h4>Nearby Fixtures</h4>
   </div>
