--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -94,6 +94,11 @@
 
           </div>
           <hr>
+          <div class="row">
+            <div class="col-md-12">
+              <app-fixture-ticker></app-fixture-ticker>
+            </div>
+          </div>
           <!-- if current user location is available, then display nearby fixtures -->
           <div class="row">
             <div class="col-md-12">
